fix case studies overflow

--- a/cevo-hugo/static/css/agency.css
+++ b/cevo-hugo/static/css/agency.css
@@ -457,6 +457,8 @@ section h3.section-subheading {
     margin-left: auto;
     margin-right: auto;
     display: block;
+    max-width: 300px;
+    max-height: 300px;
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
